# student-information-management-system

./: .gitignore  CMakeLists.txt  Doxyfile  ReadME.md
docs/html/: _c_make_c_compiler_id_8c.html  _read_m_e_8md.html  _read_me_8md.html  annotated.html  classes.html  cmake-build-debug_2_c_make_files_23_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  common_8h.html  common_8h_source.html  datamanager_8c.html  datamanager_8h.html  datamanager_8h_source.html  dir_020e4a53e97f78b22783b09a7c932b0c.html  dir_1406d366b772480dc038957a3b887468.html  dir_15e745cfa6718f09f4a3a3482dd2e260.html  dir_36a319fdfa90daea3fe65386bde15ea1.html  dir_3c4c7c1a85608ccd561c026bec818e51.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a30f206eb85b936aebf778f8ca08be7c.html  dir_c93021b2a1f64bde7e20b74f05921586.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  md__read_me.html  menudata.js  pages.html  src_2cmake-build-debug_2_c_make_files_23_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  struct_course-members.html  struct_course.html  (+6 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  pages_2.js  (+9 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _read_m_e_8md.tex  _read_me_8md.tex  annotated.tex  cmake-build-debug_2_c_make_files_23_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  common_8h.tex  common_8h_source.tex  datamanager_8c.tex  datamanager_8h.tex  datamanager_8h_source.tex  dir_020e4a53e97f78b22783b09a7c932b0c.tex  dir_1406d366b772480dc038957a3b887468.tex  dir_15e745cfa6718f09f4a3a3482dd2e260.tex  dir_36a319fdfa90daea3fe65386bde15ea1.tex  dir_3c4c7c1a85608ccd561c026bec818e51.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_95e29a8b8ee7c54052c171a88bb95675.tex  dir_a30f206eb85b936aebf778f8ca08be7c.tex  dir_c93021b2a1f64bde7e20b74f05921586.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_f89abcb304c928c7d889aa5625570de5.tex  files.tex  index.tex  main_8c.tex  md__read_me.tex  refman.tex  src_2cmake-build-debug_2_c_make_files_23_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  struct_course.tex  struct_programme.tex  struct_student_record.tex  struct_user.tex
include/: color-printf.h  common-functions.h  common.h  create_user.h  datamanager.h  login.h  student-system.h  ui-strings.h  user-interface.h  user-menu.h  view-user-template.h
include/data management system/: csv-processor-api.h  datamanager-utilities.h  datamanager.h  file-interaction-api.h
include/menus/: main-interface.h  menu-utils.h  student-options.h
include/student management system/: student-management.h
include/systems/: student-system.h  user-system.h
include/user interface/: ui-inputs.h  ui-main.h  ui-utils.h
include/user management system/: user-management.h
include/utils/: common-functions.h  test-functions.h
src/: CMakeLists.txt  main.c
src/components/: create_user.c  datamanager.c  login.c  user-menu.c  view-user-template.c  view_user_template.c
src/components/data management system/: csv-processor-api.c  datamanager-utilities.c  datamanager.c  file-interaction-api.c
src/components/menus/: main-interface.c  menu-utils.c  student-options.c  student-system.c  user-interface.c
src/components/student management system/: student-management.c
src/components/systems/: student-system.c  user-system.c
src/components/user interface/: HowToUi.md  ui-inputs.c  ui-main.c  ui-utils.c  user-interface.c
src/components/user management system/: login.c  user-management.c
src/components/utils/: color-printf.c  common-functions.c  test-functions.c
subproject/database-miniature/: Doxyfile
subproject/database-miniature/docs/html/: annotated.html  classes.html  database-common_8h.html  database-common_8h_source.html  database_8c.html  database_8h.html  database_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8c.html  menudata.js  struct_metadata-members.html  struct_metadata.html
subproject/database-miniature/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  variables_0.js
subproject/database-miniature/docs/latex/: annotated.tex  database-common_8h.tex  database-common_8h_source.tex  database_8c.tex  database_8h.tex  database_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8c.tex  refman.tex  struct_metadata.tex
subproject/database-miniature/include/: database-common.h  database-entity.h  database.h
subproject/database-miniature/src/: CMakeLists.txt  database.c  main.c
subproject/database-miniature/tests/: CMakeLists.txt  test1.c
subproject/logger/include/: logger.h
subproject/logger/src/: logger.c
tests/src/data management system/: course-data-api-tests.c  csv-processor-api-tests.c  datamanager-utilities-test.c  file-interaction-api-tests.c  programme-data-api-tests.c  student-record-data-api-tests.c  user-data-api-tests.c
tests/src/user management system/: add-user-tests.c
